# oci_python_examples_public

./: .gitignore  README.md  pyproject.toml  requirements.txt
env/: config.example
oci_python_examples/: helper_func.py  main.py
tests/: test_oci_python_examples.py
