[tool.poetry]
name = "oci_python_examples"
version = "0.1.0"
description = ""
authors = ["chacuavip10 <chacuavip10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
oci = "^2.62.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
